[gd_scene load_steps=12 format=3 uid="uid://cososf1t7dm8"]

[ext_resource type="PackedScene" uid="uid://caomwo0h5ydsq" path="res://scenes/ui/ui.tscn" id="1_aqg43"]
[ext_resource type="Texture2D" uid="uid://b2bn3cv0ifdmm" path="res://icon.svg" id="2_0lsof"]
[ext_resource type="Script" path="res://scenes/cauldron/ingredients_panel.gd" id="2_nxwoo"]
[ext_resource type="PackedScene" uid="uid://cx7fykus4gia5" path="res://scenes/cauldron/ingredient_list_item.tscn" id="3_5us3e"]
[ext_resource type="Script" path="res://scenes/cauldron/cauldron_crafting.gd" id="4_b4w0r"]
[ext_resource type="Script" path="res://scenes/cauldron/recipes_panel.gd" id="4_n0ff3"]
[ext_resource type="PackedScene" uid="uid://bo8l6iintwsmk" path="res://scenes/ingredients_container.tscn" id="5_benhy"]
[ext_resource type="PackedScene" uid="uid://5h6qpu67sl1" path="res://scenes/cauldron/recipe_list_item.tscn" id="5_mexgv"]
[ext_resource type="Script" path="res://scenes/cauldron/recipe_details.gd" id="6_ohfnr"]
[ext_resource type="PackedScene" uid="uid://c5dkdfaw4o8pw" path="res://scenes/ui/exit_button.tscn" id="7_kq343"]

[sub_resource type="CircleShape2D" id="CircleShape2D_os6cp"]
radius = 78.1025

[node name="Cauldron" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="UI" parent="." instance=ExtResource("1_aqg43")]

[node name="IngredientsPanel" type="Panel" parent="UI"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -269.0
offset_top = 220.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 10
mouse_filter = 2
script = ExtResource("2_nxwoo")
ingredient_list_item_scene = ExtResource("3_5us3e")

[node name="IngredientsList" type="VBoxContainer" parent="UI/IngredientsPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RecipesPanel" type="Panel" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 239.0
offset_right = 278.0
grow_vertical = 2
script = ExtResource("4_n0ff3")
recipe_list_item_scene = ExtResource("5_mexgv")

[node name="RecipesList" type="VBoxContainer" parent="UI/RecipesPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecipeDetails" type="Panel" parent="UI/RecipesPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ohfnr")

[node name="TextEdit" type="TextEdit" parent="UI/RecipesPanel/RecipeDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="UI/RecipesPanel/RecipeDetails"]
layout_mode = 1
offset_right = 42.0
offset_bottom = 36.0
text = "return"

[node name="ExitButton" parent="UI" instance=ExtResource("7_kq343")]

[node name="CauldronCrafting" type="Area2D" parent="."]
position = Vector2(547, 372)
script = ExtResource("4_b4w0r")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="CauldronCrafting"]
texture = ExtResource("2_0lsof")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CauldronCrafting"]
shape = SubResource("CircleShape2D_os6cp")

[node name="IngredientsContainer" parent="." instance=ExtResource("5_benhy")]
unique_name_in_owner = true

[connection signal="pressed" from="UI/RecipesPanel/RecipeDetails/ReturnButton" to="UI/RecipesPanel" method="_on_return_button_pressed"]
[connection signal="input_event" from="CauldronCrafting" to="CauldronCrafting" method="_on_input_event"]
